2000-02-16  Gerd Moellmann  <gerd@gnu.org>

	* sysdep.c (vfork) [!HAVE_VFORK]: Removed.

2000-02-15  Gerd Moellmann  <gerd@gnu.org>

	* s/freebsd.h (BROKEN_PTY_READ_AFTER_EAGAIN): Define.

	* process.c (send_process) [BROKEN_PTY_READ_AFTER_EAGAIN]:
	Workaround for FreeBSD bug.  Clear output queue after EAGAIN in
	write(2).

2000-02-15  Richard M. Stallman  <rms@gnu.org>

	* data.c (set_internal): Don't make variable buffer-local
	if within a let-binding for the same buffer.
	(let_shadows_buffer_binding_p): New function.

	* eval.c (specbind): For buffer-local value,
	record the current buffer also.
	(unbind_to): Cope with that change.

2000-02-15  Gerd Moellmann  <gerd@gnu.org>

	* window.c (Fsave_window_excursion): Doc fix.

2000-02-15  Stefan Monnier  <monnier@cs.yale.edu>

	* syntax.c (back_comment): Make sure we only consider comment-starters
	of the relevant style and return -1 in case of a failure to find the
	beginning of the comment.
	(Fforward_comment): If back_comment fails, go back to the position just
	after the comment-end.
	(scan_lists): Add comment describing a very minor bug.

2000-02-14  Stefan Monnier  <monnier@cs.yale.edu>

	* minibuf.c (Ftry_completion, Fall_completions): Add a reference to
	`completion-regexp-list' in the docstring.

2000-02-14  Dave Love  <fx@gnu.org>

	* xfaces.c (tty_defined_color): Declare color_idx unsigned long.

2000-02-14  Stefan Monnier  <monnier@cs.yale.edu>

	* regex.h (RE_SYNTAX_EMACS): Add RE_CHAR_CLASSES and RE_INTERVALS
	to Emacs' syntax.  Also fix the comment about set/not-set meanings
	since Emacs syntax is not the value 0 any more.
	* search.c (compile_pattern_1): Remove RE_CHAR_CLASSES from the syntax
	since it's now part of RE_SYNTAX_EMACS.

2000-02-12  Dave Love  <fx@gnu.org>

	* frame.h (SELECTED_FRAME): Use NULL, not 0 to avoid warnings on
	Alpha.

2000-02-12  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (syms_of_xdisp): Doc fix for scroll-conservatively.

2000-02-12  Dave Love  <fx@gnu.org>
